Add margin for Header, Hero

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,24 +24,26 @@
 <body>
     <header>
         <!--Навигация на другие страницы сайта-->
-        <nav>
-            <ul>
-                <li><a href="/" class="logo-header"><span>Web</span> Studio</a></li>
-                <li><a href="./index.html" class="site-nav">Студия</a></li>
-                <li><a href="./portfolio.html" class="site-nav current">Портфолио</a></li>
-                <li><a href="" class="site-nav">Контакты</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav>
+                <ul class="list">
+                    <li><a href="/" class="logo-header"><span>Web</span> Studio</a></li>
+                    <li><a href="./index.html" class="site-nav">Студия</a></li>
+                    <li><a href="./portfolio.html" class="site-nav current">Портфолио</a></li>
+                    <li><a href="" class="site-nav">Контакты</a></li>
+                </ul>
+            </nav>
     
-        <!-- Блок с контактами -->
-        <ul class="nav-contacts">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+            <!-- Блок с контактами -->
+            <ul class="nav-contacts list">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </header>
 
     <main>
-        <ul class="filter">
+        <ul class="filter list">
             <li class="filter-list">
                 <button type="button">Все</button>
             </li>
@@ -60,7 +62,7 @@
         </ul>
         
         <section class="jobs">
-            <ul>
+            <ul class="list">
                 <li>
                     <a href=""> <img src="./images/imgages-portfolio/technokhryak-min.jpg"
                         alt="На экране ноутбука карточки сотрудников" width="370">
@@ -155,7 +157,7 @@
         <!-- Адрес футера -->
         <div>
             <address class="footer">
-                <ul>
+                <ul class="list">
                     <li>
                         <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715"
                             target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
@@ -173,7 +175,7 @@
         <!--=================================================================================================Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label======================================================================================-->
         <div class="foter-social">
             <p class="title-footer"><b>ПРИСОЕДИНЯЙТЕСЬ</b></p>
-            <ul>
+            <ul class="list">
                 <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
                         Инстаграмм</a></li>
                 <li><a href="" aria-label="Иконка ссылка на Твитер">Иконка ссылка на Твитер</a></li>
