--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 <body>
     <header>
         <!--Навигация на другие страницы сайта-->
+        <div class="container">
         <nav>
-            <ul>
+            <ul class="list">
                 <li><a href="/" class="logo-header"><span>Web</span> Studio</a></li>
                 <li><a href="./index.html" class="site-nav current">Студия</a></li>
                 <li><a href="./portfolio.html" class="site-nav">Портфолио</a></li>
@@ -33,10 +34,11 @@
         </nav>
 
         <!-- Блок с контактами -->
-        <ul class="nav-contacts">
+        <ul class="nav-contacts list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
 
     <main>
@@ -51,7 +53,7 @@
         <!-- Секция преимущества -->
         <section class="advantage">
             <h2>Премущества</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/antenna.svg" alt="Изображение антены">
                     <h3 class="advant-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -82,7 +84,7 @@
         <!-- Секция Чем мы занимаемся -->
         <section class="works">
             <h2 class="title">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/laptop-min.jpg" alt="Изображение ноутбука настоле"
                         width="370">
@@ -103,7 +105,7 @@
         <!--=================================================================================================Секция Наша команда - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label======================================================================================-->
         <section class="team">
             <h2 class="title">Наша команда</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/nikolay-kucherenko-min.jpg" alt="Фото Николая Кучеренко">
                     <h3 class="team-name">Николай Кучеренко</h3>
@@ -170,7 +172,7 @@
         <!-- ===================================================================================================Секция Постоянные клиенты - ссылки на соцсети правильно делать без <img> а через inline SVG   area-label=======================================================================-->
         <section class="clients">
             <h2 class="title">Постоянные клиенты</h2>
-            <ul>
+            <ul class="list">
                 <li><a href="" aria-label="Иконка-ссылка на компанию №1">Логотип компании №1</a>
                 </li>
                 <li><a href="" aria-label="Иконка-ссылка на компанию №2">Логотип компании №2</a>
@@ -196,7 +198,7 @@
         <!-- Адрес футера -->
         <div>
             <address class="footer">
-                <ul>
+                <ul class="list">
                     <li>
                         <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715"
                         target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
@@ -214,7 +216,7 @@
         <!--=================================================================================================Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label======================================================================================-->
         <div class="foter-social">
             <p class="title-footer"><b>ПРИСОЕДИНЯЙТЕСЬ</b></p>
-            <ul>
+            <ul class="list">
                 <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
                         Инстаграмм</a></li>
                 <li><a href="" aria-label="Иконка ссылка на Твитер">Иконка ссылка на Твитер</a></li>
