Add margins for all sections  index.html

--- a/index.html
+++ b/index.html
@@ -52,61 +52,66 @@
 
         <!-- Секция преимущества -->
         <section class="advantage">
-            <h2>Премущества</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/antenna.svg" alt="Изображение антены">
-                    <h3 class="advant-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию
-                        позиции.</p>
-                </li>
-                <li>
-                    <img src="./images/clock.svg" alt="Изображение часов">
-                    <h3 class="advant-title">ПУНКТУАЛЬНОСТЬ</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
-                        собой.</p>
-                </li>
-                <li>
-                    <img src="./images/diagram.svg" alt="Изображение диагарммы">
-                    <h3 class="advant-title">ПЛАНИРОВАНИЕ</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени
-                        обуславливает.</p>
-                </li>
-                <li>
-                    <img src="./images/astronaut.svg" alt="Изображение космонавта">
-                    <h3 class="advant-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2>Премущества</h2>
+                <ul class="list">
+                    <li>
+                        <img src="./images/antenna.svg" alt="Изображение антены">
+                        <h3 class="advant-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.</p>
+                    </li>
+                    <li>
+                        <img src="./images/clock.svg" alt="Изображение часов">
+                        <h3 class="advant-title">ПУНКТУАЛЬНОСТЬ</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
+                            собой.</p>
+                    </li>
+                    <li>
+                        <img src="./images/diagram.svg" alt="Изображение диагарммы">
+                        <h3 class="advant-title">ПЛАНИРОВАНИЕ</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени
+                            обуславливает.</p>
+                    </li>
+                    <li>
+                        <img src="./images/astronaut.svg" alt="Изображение космонавта">
+                        <h3 class="advant-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- Секция Чем мы занимаемся -->
         <section class="works">
-            <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/laptop-min.jpg" alt="Изображение ноутбука настоле"
-                        width="370">
-                    <h3 class="works-subtitle">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
-                </li>
-                <li>
-                    <img src="./images/mobile-min.jpg" alt="Изображение мобильного телефона"
-                        width="370">
-                    <h3 class="works-subtitle">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
-                </li>
-                <li>
-                    <img src="./images/desctop-min.jpg" alt="Изображение комьютера" width="370">
-                    <h3 class="works-subtitle">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="works-title">Чем мы занимаемся</h2>
+                <ul class="list">
+                    <li>
+                        <img src="./images/laptop-min.jpg" alt="Изображение ноутбука настоле"
+                            width="370">
+                        <h3 class="works-subtitle">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
+                    </li>
+                    <li>
+                        <img src="./images/mobile-min.jpg" alt="Изображение мобильного телефона"
+                            width="370">
+                        <h3 class="works-subtitle">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
+                    </li>
+                    <li>
+                        <img src="./images/desctop-min.jpg" alt="Изображение комьютера" width="370">
+                        <h3 class="works-subtitle">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
+                    </li>
+                </ul>
+            </div>
         </section>
 
-        <!--=================================================================================================Секция Наша команда - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label======================================================================================-->
+        <!--===========================================================================Секция Наша команда - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label===============================================-->
         <section class="team">
-            <h2 class="title">Наша команда</h2>
+            <div class="container">
+            <h2 class="team-title">Наша команда</h2>
             <ul class="list">
-                <li>
+                <li class="team-card">
                     <img src="./images/nikolay-kucherenko-min.jpg" alt="Фото Николая Кучеренко">
                     <h3 class="team-name">Николай Кучеренко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
@@ -121,7 +126,7 @@
                                 Линкедин</a></li>
                     </ul>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/olga-ivanova-min.jpg" alt="Фото Ольги Ивановой">
                     <h3 class="team-name">Ольга Иванова</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
@@ -136,7 +141,7 @@
                                 Линкедин</a></li>
                     </ul>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/andriy-shevchenko-min.jpg" alt="Фоото Андрея Шевченко">
                     <h3 class="team-name">Андрей Шевченко</h3>
                     <p lang="en" class="team-position">Marketing</p>
@@ -151,7 +156,7 @@
                                 Линкедин</a></li>
                     </ul>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/ivan-nikolaev-min.jpg" alt="Фото Ивана Николаева">
                     <h3 class="team-name">Иван Николаев</h3>
                     <p lang="en" class="team-position">UI Designer</p>
@@ -167,11 +172,13 @@
                     </ul>
                 </li>
             </ul>
+            </div>
         </section>
 
-        <!-- ===================================================================================================Секция Постоянные клиенты - ссылки на соцсети правильно делать без <img> а через inline SVG   area-label=======================================================================-->
+        <!-- ===============================================================================Секция Постоянные клиенты - ссылки на соцсети правильно делать без <img> а через inline SVG area-label =============================================-->
         <section class="clients">
-            <h2 class="title">Постоянные клиенты</h2>
+            <div class="container">
+            <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="list">
                 <li><a href="" aria-label="Иконка-ссылка на компанию №1">Логотип компании №1</a>
                 </li>
@@ -186,13 +193,15 @@
                 <li><a href="" aria-label="Иконка-ссылка на компанию №6">Логотип компании №6</a>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
-<!-- ===========Тест из конспекта============================================================= -->
+<!-- ===========  Тест из конспекта============================================= -->
     
 
-    <!-- Блок Футер  -->
+    <!-- ====================   Блок Футер  ====================================-->
     <footer>
+        <div class="container">
         <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span >Web</span> Studio</b></a>
 
         <!-- Адрес футера -->
@@ -213,7 +222,7 @@
             </address>
         </div>
 
-        <!--=================================================================================================Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label======================================================================================-->
+        <!--===========================================================================Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label   ================================================-->
         <div class="foter-social">
             <p class="title-footer"><b>ПРИСОЕДИНЯЙТЕСЬ</b></p>
             <ul class="list">
@@ -232,6 +241,7 @@
             <p class="title-footer"><b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b></p>
             <input type="email" value="E-mail" name="e-mail">
             <button type="button" class="footer-btn">Подписаться</button>
+        </div>
         </div>
     </footer>
 </body>
