Add margin for Clients section

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
         <section class="team">
             <div class="container">
             <h2 class="team-title">Наша команда</h2>
-            <ul class="list">
+            <ul class="team-members list">
                 <li class="team-card">
                     <img src="./images/nikolay-kucherenko-min.jpg" alt="Фото Николая Кучеренко">
                     <h3 class="team-name">Николай Кучеренко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
-                    <ul>
+                    <ul class="team-social list">
                         <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
                                 Инстаграмм</a></li>
                         <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
@@ -130,7 +130,7 @@
                     <img src="./images/olga-ivanova-min.jpg" alt="Фото Ольги Ивановой">
                     <h3 class="team-name">Ольга Иванова</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
-                    <ul>
+                    <ul class="team-social list">
                         <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
                                 Инстаграмм</a></li>
                         <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
@@ -145,7 +145,7 @@
                     <img src="./images/andriy-shevchenko-min.jpg" alt="Фоото Андрея Шевченко">
                     <h3 class="team-name">Андрей Шевченко</h3>
                     <p lang="en" class="team-position">Marketing</p>
-                    <ul>
+                    <ul class="team-social list">
                         <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
                                 Инстаграмм</a></li>
                         <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
@@ -160,7 +160,7 @@
                     <img src="./images/ivan-nikolaev-min.jpg" alt="Фото Ивана Николаева">
                     <h3 class="team-name">Иван Николаев</h3>
                     <p lang="en" class="team-position">UI Designer</p>
-                    <ul>
+                    <ul class="team-social list">
                         <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
                                 Инстаграмм</a></li>
                         <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
@@ -179,7 +179,7 @@
         <section class="clients">
             <div class="container">
             <h2 class="clients-title">Постоянные клиенты</h2>
-            <ul class="list">
+            <ul class="clients-list list">
                 <li><a href="" aria-label="Иконка-ссылка на компанию №1">Логотип компании №1</a>
                 </li>
                 <li><a href="" aria-label="Иконка-ссылка на компанию №2">Логотип компании №2</a>
