Add header flex-box styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
 <body>
     <header>
         <!--Навигация на другие страницы сайта-->
-        <div class="container">
-            <nav>
-                <ul class="list">
-                    <li><a href="/" class="logo-header"><span>Web</span> Studio</a></li>
+        <div class="container header-flex">
+            <a href="/" class="logo-header"><span>Web</span> Studio</a>
+            <nav class="header-nav">
+                <ul class="list nav-list">
                     <li><a href="./index.html" class="site-nav">Студия</a></li>
                     <li><a href="./portfolio.html" class="site-nav current">Портфолио</a></li>
                     <li><a href="" class="site-nav">Контакты</a></li>
