--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
 </head>
 
 <body>
-    <header>
+    <header >
         <!--Навигация на другие страницы сайта-->
-        <div class="container">
-        <nav>
-            <ul class="list">
-                <li><a href="/" class="logo-header"><span>Web</span> Studio</a></li>
-                <li><a href="./index.html" class="site-nav current">Студия</a></li>
-                <li><a href="./portfolio.html" class="site-nav">Портфолио</a></li>
-                <li><a href="" class="site-nav">Контакты</a></li>
-            </ul>
-        </nav>
+        <div class="container header-flex">
+            <a href="/" class="logo-header"><span>Web</span> Studio</a>
+            <nav class="header-nav">
+                <ul class="list nav-list">
+                    <li><a href="./index.html" class="site-nav current">Студия</a></li>
+                    <li><a href="./portfolio.html" class="site-nav">Портфолио</a></li>
+                    <li><a href="" class="site-nav">Контакты</a></li>
+                </ul>
+            </nav>
 
-        <!-- Блок с контактами -->
-        <ul class="nav-contacts list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+            <!-- Блок с контактами -->
+            <ul class="nav-contacts list">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </div>
     </header>
 
