Add Flex-box styles for Our Team section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section class="works">
             <div class="container">
                 <h2 class="works-title">Чем мы занимаемся</h2>
-                <ul class="list">
+                <ul class="works-list list">
                     <li>
                         <img src="./images/laptop-min.jpg" alt="Изображение ноутбука настоле"
                             width="370">
@@ -114,7 +114,8 @@
             </div>
         </section>
 
-        <!--===========================================================================Секция Наша команда - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label===============================================-->
+        <!--======================================================================================
+            Секция Наша команда - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label  =======================================================================-->
         <section class="team">
             <div class="container">
             <h2 class="team-title">Наша команда</h2>
@@ -124,14 +125,10 @@
                     <h3 class="team-name">Николай Кучеренко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
-                                Инстаграмм</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
-                                Твиттер</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Иконка ссылка на
-                                Фейсбук</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Иконка ссылка на
-                                Линкедин</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
                     </ul>
                 </li>
                 <li class="team-card">
@@ -139,14 +136,10 @@
                     <h3 class="team-name">Ольга Иванова</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
-                                Инстаграмм</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
-                                Твиттер</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Иконка ссылка на
-                                Фейсбук</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Иконка ссылка на
-                                Линкедин</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
                     </ul>
                 </li>
                 <li class="team-card">
@@ -154,14 +147,10 @@
                     <h3 class="team-name">Андрей Шевченко</h3>
                     <p lang="en" class="team-position">Marketing</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
-                                Инстаграмм</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
-                                Твиттер</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Иконка ссылка на
-                                Фейсбук</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Иконка ссылка на
-                                Линкедин</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
                     </ul>
                 </li>
                 <li class="team-card">
@@ -169,14 +158,10 @@
                     <h3 class="team-name">Иван Николаев</h3>
                     <p lang="en" class="team-position">UI Designer</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
-                                Инстаграмм</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Иконка ссылка на
-                                Твиттер</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Иконка ссылка на
-                                Фейсбук</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Иконка ссылка на
-                                Линкедин</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
+                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
                     </ul>
                 </li>
             </ul>
