Add styles for Cocial Net Our Team

--- a/index.html
+++ b/index.html
@@ -173,17 +173,17 @@
             <div class="container">
             <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="clients-list list">
-                <li><a href="" aria-label="Иконка-ссылка на компанию №1">Логотип компании №1</a>
+                <li><a href="" aria-label="Иконка-ссылка на компанию №1">Comp №1</a>
                 </li>
-                <li><a href="" aria-label="Иконка-ссылка на компанию №2">Логотип компании №2</a>
+                <li><a href="" aria-label="Иконка-ссылка на компанию №2">Comp №2</a>
                 </li>
-                <li><a href="" aria-label="Иконка-ссылка на компанию №3">Логотип компании №3</a>
+                <li><a href="" aria-label="Иконка-ссылка на компанию №3">Comp №3</a>
                 </li>
-                <li><a href="" aria-label="Иконка-ссылка на компанию №4">Логотип компании №4</a>
+                <li><a href="" aria-label="Иконка-ссылка на компанию №4">Comp №4</a>
                 </li>
-                <li><a href="" aria-label="Иконка-ссылка на компанию №5">Логотип компании №5</a>
+                <li><a href="" aria-label="Иконка-ссылка на компанию №5">Comp №5</a>
                 </li>
-                <li><a href="" aria-label="Иконка-ссылка на компанию №6">Логотип компании №6</a>
+                <li><a href="" aria-label="Иконка-ссылка на компанию №6">Comp №6</a>
                 </li>
             </ul>
             </div>
