Add Flex-box styles for Footer

--- a/index.html
+++ b/index.html
@@ -194,47 +194,47 @@
 
     <!-- ====================   Блок Футер  ====================================-->
     <footer>
-        <div class="container">
-        <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span >Web</span> Studio</b></a>
+        <div class="footer-box container">
 
-        <!-- Адрес футера -->
-        <div>
-            <address class="footer">
-                <ul class="list">
-                    <li>
-                        <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715"
-                        target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com">info@example.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111">+9 11138 09 11 11</a>
-                    </li>
+            <!-- Адрес футера -->
+            <div>
+                <address class="footer-contacts">
+                    <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span>Web</span> Studio</b></a>
+                    <ul class="list">
+                        <li>
+                            <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715"
+                            target="_blank" class="foot-adress">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a href="mailto:info@devstudio.com" class="foot-adress">info@example.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380961111111" class="foot-adress">+9 11138 09 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <!--=====================================================================================
+                Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label   =====================================================================-->
+            <div class="foter-social">
+                <p class="title-footer"><b>ПРИСОЕДИНЯЙТЕСЬ</b></p>
+                <ul class="foot-list list">
+                    <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
+                    <li><a href="" aria-label="Иконка ссылка на Твитер">Tw</a></li>
+                    <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
+                    <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
                 </ul>
-            </address>
-        </div>
+            </div>
 
-        <!--===========================================================================Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label   ================================================-->
-        <div class="foter-social">
-            <p class="title-footer"><b>ПРИСОЕДИНЯЙТЕСЬ</b></p>
-            <ul class="list">
-                <li><a href="" aria-label="Иконка ссылка на Инстаграмм">Иконка ссылка на
-                        Инстаграмм</a></li>
-                <li><a href="" aria-label="Иконка ссылка на Твитер">Иконка ссылка на Твитер</a></li>
-                <li><a href="" aria-label="Иконка ссылка на Фейсбук">Иконка ссылка на Фейсбук</a>
-                </li>
-                <li><a href="" aria-label="Иконка ссылка на Линкедин">Иконка ссылка на Линкедин</a>
-                </li>
-            </ul>
-        </div>
-
-        <!-- Форма подписки футера  -->
-        <div class="footer-action">
-            <p class="title-footer"><b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b></p>
-            <input type="email" value="E-mail" name="e-mail">
-            <button type="button" class="footer-btn">Подписаться</button>
-        </div>
+            <!-- Форма подписки футера  -->
+            <div class="footer-action">
+                <p class="title-footer"><b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b></p>
+                <div class="inpit-deco">
+                    <input type="email" value="E-mail" name="e-mail">
+                    <button type="button" class="footer-btn">Подписаться</button>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
