Add Flex styles for setion Our Works

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="main-box container">
             <div class="filter">   
                 <ul class="list">
                     <li class="filter-list">
@@ -65,7 +65,7 @@
             </div>
         
             <section class="jobs">
-                <ul class="list">
+                <ul class="jobs-list list">
                     <li>
                         <a href=""> <img src="./images/imgages-portfolio/technokhryak-min.jpg" class="jobs-img"
                             alt="На экране ноутбука карточки сотрудников" width="370">
