Add rel=noopener for adress

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
             <!-- Блок с контактами -->
             <ul class="nav-contacts list">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener" >info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" target="_blank" rel="noopener" >+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -202,14 +202,13 @@
                     <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span>Web</span> Studio</b></a>
                     <ul class="list">
                         <li>
-                            <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715"
-                            target="_blank" class="foot-adress">г. Киев, пр-т Леси Украинки, 26</a>
+                            <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715" target="_blank" rel="noopener" class="foot-adress">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
                         <li>
-                            <a href="mailto:info@devstudio.com" class="foot-adress">info@example.com</a>
+                            <a href="mailto:info@devstudio.com" target="_blank" rel="noopener"  class="foot-adress">info@example.com</a>
                         </li>
                         <li>
-                            <a href="tel:+380961111111" class="foot-adress">+9 11138 09 11 11</a>
+                            <a href="tel:+380961111111" class="foot-adress" target="_blank" rel="noopener" >+9 11138 09 11 11</a>
                         </li>
                     </ul>
                 </address>
