--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,16 @@
             <a href="/" class="logo-header"><span>Web</span> Studio</a>
             <nav class="header-nav">
                 <ul class="list nav-list">
-                    <li><a href="./index.html" class="site-nav">Студия</a></li>
-                    <li><a href="./portfolio.html" class="site-nav current">Портфолио</a></li>
-                    <li><a href="" class="site-nav">Контакты</a></li>
+                    <li><a href="./index.html" class="site-nav" rel="noopener" >Студия</a></li>
+                    <li><a href="./portfolio.html" class="site-nav current" rel="noopener" >Портфолио</a></li>
+                    <li><a href="" class="site-nav" rel="noopener" >Контакты</a></li>
                 </ul>
             </nav>
     
             <!-- Блок с контактами -->
             <ul class="nav-contacts list">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener" >info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" target="_blank" rel="noopener">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -67,8 +67,7 @@
             <section class="jobs">
                 <ul class="jobs-list list">
                     <li>
-                        <a href=""> <img src="./images/imgages-portfolio/technokhryak-min.jpg" class="jobs-img"
-                            alt="На экране ноутбука карточки сотрудников" width="370">
+                        <a href=""> <img src="./images/imgages-portfolio/technokhryak-min.jpg" class="jobs-img" rel="noopener" alt="На экране ноутбука карточки сотрудников" width="370">
                             <div class="descr">
                                 <h2 class="jobs-name">Технокряк</h2>
                                 <p class="jobs-type">Веб-сайт</p>
@@ -79,7 +78,7 @@
                         
                     </li>
                     <li>
-                        <a href="">
+                        <a href="" rel="noopener" >
                             <img src="./images/imgages-portfolio/poster-min.jpg" class="jobs-img" alt="Постер с баскетболистами" width="370">
                             <div class="descr">
                                 <h2 class="jobs-name">Постер New Orlean vs Golden Star</h2>
@@ -90,7 +89,7 @@
                         </a> 
                     </li>
                     <li>
-                        <a href="">
+                        <a href="" rel="noopener" >
                             <img src="./images/imgages-portfolio/restoraunt-min.jpg" class="jobs-img"alt="Фото логотипа ресторана" width="370">
                             <div class="descr">
                                 <h2 class="jobs-name">Ресторан Seafood</h2>
@@ -101,7 +100,7 @@
                         </a> 
                     </li>
                     <li>
-                        <a href="">
+                        <a href="" rel="noopener" >
                             <img src="./images/imgages-portfolio/prime-min.jpg" alt="Фото наушников" width="370">
                             <div class="descr">
                                 <h2 class="jobs-name">Проект Prime</h2>
@@ -178,18 +177,17 @@
             <!-- Адрес футера -->
             <div>
                 <address class="footer-contacts">
-                    <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span>Web</span>
+                    <a href="./index.html" lang="en" class="logo-header logo-footer" rel = "noreferrer noopener" ><b><span>Web</span>
                             Studio</b></a>
                     <ul class="list">
                         <li>
-                            <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715"
-                                target="_blank" class="foot-adress">г. Киев, пр-т Леси Украинки, 26</a>
+                            <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715" target="_blank" class="foot-adress"  rel = "noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
                         <li>
-                            <a href="mailto:info@devstudio.com" class="foot-adress">info@example.com</a>
+                            <a href="mailto:info@devstudio.com" target="_blank" class="foot-adress">info@example.com</a>
                         </li>
                         <li>
-                            <a href="tel:+380961111111" class="foot-adress">+9 11138 09 11 11</a>
+                            <a href="tel:+380961111111" class="foot-adress" rel = "noreferrer noopener">+9 11138 09 11 11</a>
                         </li>
                     </ul>
                 </address>
