--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <!-- Адрес футера -->
             <div>
                 <address class="footer-contacts">
-                    <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span>Web</span> Studio</b></a>
+                    <a href="./index.html" lang="en" class="logo-header logo-footer"><b><span>Web </span>Studio</b></a>
                     <ul class="list">
                         <li>
                             <a href="https://maps.google.com?saddr=Current+Location&daddr=50.544869610058456,30.540254186068715" target="_blank" rel="noopener" class="foot-adress">г. Киев, пр-т Леси Украинки, 26</a>
@@ -217,7 +217,7 @@
             <!--=====================================================================================
                 Блок ссылок футера - ссылки на соцсети правильно делать без <img> а через inline SVG и area-label   =====================================================================-->
             <div class="foter-social">
-                <p class="title-footer"><b>ПРИСОЕДИНЯЙТЕСЬ</b></p>
+                <b class="title-footer">ПРИСОЕДИНЯЙТЕСЬ</b>
                 <ul class="foot-list list">
                     <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
                     <li><a href="" aria-label="Иконка ссылка на Твитер">Tw</a></li>
@@ -228,7 +228,7 @@
 
             <!-- Форма подписки футера  -->
             <div class="footer-action">
-                <p class="title-footer"><b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b></p>
+                <b class="title-footer">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
                 <div class="inpit-deco">
                     <input type="email" value="E-mail" name="e-mail">
                     <button type="button" class="footer-btn">Подписаться</button>
