--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <!-- Блок Герой -->
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения <br/> для вашего бизнеса</h1>
             <button type="button" class="hero-btn">Заказать услугу</button>
             <!-- <span class="hero-btn-box"><a href="/" class="">Заказать услугу</a></span> -->
             
