--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             <section class="jobs">
                 <ul class="jobs-list list">
                     <li>
-                        <a href=""> <img src="./images/imgages-portfolio/technokhryak-min.jpg" class="jobs-img" rel="noopener" alt="На экране ноутбука карточки сотрудников" width="370">
+                        <a href=""> <img src="./images/imgages-portfolio/technokhryak-min.jpg" class="jobs-img" rel="noopener" alt="На экране ноутбука карточки сотрудников" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Технокряк</h2>
                                 <p class="jobs-type">Веб-сайт</p>
@@ -79,7 +79,7 @@
                     </li>
                     <li>
                         <a href="" rel="noopener" >
-                            <img src="./images/imgages-portfolio/poster-min.jpg" class="jobs-img" alt="Постер с баскетболистами" width="370">
+                            <img src="./images/imgages-portfolio/poster-min.jpg" class="jobs-img" alt="Постер с баскетболистами" width="370" height="294" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Постер New Orlean vs Golden Star</h2>
                                 <p class="jobs-type">Дизайн</p>
@@ -90,7 +90,7 @@
                     </li>
                     <li>
                         <a href="" rel="noopener" >
-                            <img src="./images/imgages-portfolio/restoraunt-min.jpg" class="jobs-img"alt="Фото логотипа ресторана" width="370">
+                            <img src="./images/imgages-portfolio/restoraunt-min.jpg" class="jobs-img"alt="Фото логотипа ресторана" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Ресторан Seafood</h2>
                                 <p class="jobs-type">Приложение</p>
@@ -101,7 +101,7 @@
                     </li>
                     <li>
                         <a href="" rel="noopener" >
-                            <img src="./images/imgages-portfolio/prime-min.jpg" alt="Фото наушников" width="370">
+                            <img src="./images/imgages-portfolio/prime-min.jpg" alt="Фото наушников" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Проект Prime</h2>
                                 <p class="jobs-type">Маркетинг</p>
@@ -112,7 +112,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="./images/imgages-portfolio/boxes-min.jpg" alt="Фото картонных коробок" width="370">
+                            <img src="./images/imgages-portfolio/boxes-min.jpg" alt="Фото картонных коробок" width="370" height="294">
                                 <div class="descr">
                                 <h2 class="jobs-name">Проект Boxes</h2>
                             <p class="jobs-type">Приложение</p>
@@ -123,7 +123,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="./images/imgages-portfolio/insperation-min.jpg" class="jobs-img"alt="Фото монитора" width="370">
+                            <img src="./images/imgages-portfolio/insperation-min.jpg" class="jobs-img"alt="Фото монитора" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Inspiration has no Borders</h2>
                                 <p class="jobs-type">Веб-сайт</p>
@@ -134,7 +134,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="./images/imgages-portfolio/book-min.jpg" class="jobs-img"alt="Фото открытой книги" width="370">
+                            <img src="./images/imgages-portfolio/book-min.jpg" class="jobs-img"alt="Фото открытой книги" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Издание Limited Edition</h2>
                                 <p class="jobs-type">Дизайн</p>
@@ -145,7 +145,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="./images/imgages-portfolio/lab-min.jpg" class="jobs-img"alt="Фото бумажного ярлыка" width="370">
+                            <img src="./images/imgages-portfolio/lab-min.jpg" class="jobs-img"alt="Фото бумажного ярлыка" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Проект LAB</h2>
                                 <p class="jobs-type">Маркетинг</p>
@@ -156,7 +156,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="./images/imgages-portfolio/growing-min.jpg" class="jobs-img"alt="Фото открытого ноутбука" width="370">
+                            <img src="./images/imgages-portfolio/growing-min.jpg" class="jobs-img"alt="Фото открытого ноутбука" width="370" height="294">
                             <div class="descr">
                                 <h2 class="jobs-name">Growing Business</h2>
                                 <p class="jobs-type">Приложение</p>
